# localshare

./: .gitignore  app.py  dbhandler.py  jobs.db  main.db  pyproject.toml  readme.md
templates/: data_add.html  data_show.html  my_data.html  navbar.html  privacy.html
