[tool.poetry]
name = "localshare"
version = "0.1.0"
description = ""
authors = ["shalin-devkota <shalin.devkota01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
apscheduler = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
